--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "dependencies": {
+    "@mantine/core": "^7.13.2",
+    "@mantine/hooks": "^7.13.2",
     "@prisma/client": "^5.20.0",
+    "clsx": "^2.1.1",
+    "mantine-datatable": "^7.12.4",
     "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18"
